# esp32s3_ota-api

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  Kconfig  LICENSE  README.md  idf_component.yml  partitions.csv  partitions_secure.csv
.github/workflows/: build.yml  format.yml  release.yml
docs/: publish_to_esp_registry.md
examples/basic/: CMakeLists.txt  README.md  ota_server.py  sdkconfig.defaults
examples/basic/certs/: ca_cert.pem  ca_key.pem
examples/basic/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
include/: ota-api.h
src/: ota-api.c
